--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,55 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/mostrarOpcoesSw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/mostrar_op_es" />
-
     <LinearLayout
-        android:id="@+id/selecionarLl"
-        android:layout_below="@+id/mostrarOpcoesSw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/selecione_o_n_mero_de_jogadores" />
-
-        <RadioGroup
-            android:id="@+id/opcaoRg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <RadioButton
-                android:id="@+id/jogador2Rb"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="true"
-                android:layout_marginHorizontal="5dp"
-                android:text="@string/_2_jogadores" />
-            <RadioButton
-                android:id="@+id/jogador3Rb"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginHorizontal="5dp"
-                android:text="@string/_3_jogadores" />
-        </RadioGroup>
-
-    </LinearLayout>
-
-       <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/selecionarLl"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/escolhaTv"
@@ -167,6 +122,88 @@
         android:layout_marginTop="3dp"
         android:textSize="24sp"
         android:layout_below="@+id/resultadoLabelTv"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/rodadasLabelTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="3dp"
+        android:layout_below="@+id/resultadoTv"
+        android:text="@string/rodadas" />
+
+
+    <LinearLayout
+        android:id="@+id/rodadasLl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rodadasLabelTv"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            android:text="@string/total"
+            />
+
+        <TextView
+            android:id="@+id/rodadasTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            android:text="@string/usu_rio"
+            />
+
+        <TextView
+            android:id="@+id/rodadasUsuarioTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:layout_marginTop="3dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            android:text="@string/computador"
+            />
+
+        <TextView
+            android:id="@+id/rodadasComputadorTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:layout_marginTop="3dp"
+            />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/resultadoFinalTv"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_marginTop="3dp"
+        android:textSize="24sp"
+        android:layout_below="@+id/rodadasLl"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
