--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,51 +6,11 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/mostrarOpcoesSw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/mostrar_op_es" />
-
-    <LinearLayout
-        android:id="@+id/selecionarLl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/selecione_o_n_mero_de_jogadores" />
-
-        <RadioGroup
-            android:id="@+id/opcaoRg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <RadioButton
-                android:id="@+id/jogador2Rb"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="true"
-                android:layout_marginHorizontal="5dp"
-                android:text="@string/_2_jogadores" />
-            <RadioButton
-                android:id="@+id/jogador3Rb"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginHorizontal="5dp"
-                android:text="@string/_3_jogadores" />
-        </RadioGroup>
-
-    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:text="@string/escolha_sua_jogada" />
 
     <LinearLayout
@@ -147,6 +107,89 @@
 
     <TextView
         android:id="@+id/resultadoTv"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_marginTop="3dp"
+        android:textSize="20sp"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="3dp"
+        android:text="@string/rodadas" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            android:text="@string/total"
+            />
+
+        <TextView
+            android:id="@+id/rodadasTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            android:text="@string/usu_rio"
+            />
+
+        <TextView
+            android:id="@+id/rodadasUsuarioTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:layout_marginTop="3dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
+            android:text="@string/pc"
+            />
+
+        <TextView
+            android:id="@+id/rodadasComputadorTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:layout_marginTop="3dp"
+            />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="3dp"
+        android:text="Resultado Partida" />
+
+    <TextView
+        android:id="@+id/resultadoFinalTv"
         android:layout_width="match_parent"
         android:textAlignment="center"
         android:textStyle="bold"
